# Auto_Printer

./: CMakeLists.txt  README.md
cmake/: FindPopplerQt5.cmake
includes/: AutoPrinter.h
sources/: AutoPrinter.cpp  main.cpp
